[package]
name = "async-query"
version = "0.1.0"
authors = ["Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
tokio = "=0.2.0-alpha.6"
rusqlite = { version = "0.19", features = ["chrono", "bundled"] }
